# app/Http/Controllers/API/SetController.php
@@ -2,94 +2,283 @@
 
 namespace App\Http\Controllers\API;
 
+use App\Helpers\Annotations\Access\TypeOfAccessMarker;
+use App\Helpers\Annotations\ApiAccessMarker;
+use App\Helpers\Annotations\ApiEventMarker;
 use App\Helpers\Annotations\ApiTypeMarker;
 use App\Http\Controllers\Controller;
 use App\Sys\Res\Types\Stk\Root;
 use Symfony\Component\HttpFoundation\Response as CodeOf;
+use OpenApi\Attributes as OA;
+use App\Sys\Res\Types\Stk\Root\Evt;
 
 class SetController extends Controller {
-    #[ApiTypeMarker( Root\Api\Set\Show::class)]
-    public function show_set() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
-    #[ApiTypeMarker( Root\Api\Set\ShowPublic::class)]
-    public function show_public() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
+    #[OA\Post(
+        path: '/api/v1/sets/add_element',
+        operationId: 'core.sets.add_element',
+        description: "Element namespace members can put element into any set that allows that ",
+        summary: 'Change the element owner',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Set\AddElement::class)]
     public function add_element() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Post(
+        path: '/api/v1/sets/promote_element',
+        operationId: 'core.sets.promote_member',
+        description: "System can add any element to any set without permission or events ",
+        summary: 'System can add elements to sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SYSTEM)]
     #[ApiTypeMarker( Root\Api\Set\PromoteMember::class)]
     public function promote_member() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
-    #[ApiTypeMarker( Root\Api\Set\AddHandle::class)]
-    public function add_handle() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
-    #[ApiTypeMarker( Root\Api\Set\RemoveHandle::class)]
-    public function remove_handle() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
+
+
+
+    #[OA\Post(
+        path: '/api/v1/sets/create',
+        operationId: 'core.sets.create_set',
+        description: "Element namespace admins can create sets out of those elements. Inheritied types can deny. Sets can be created a children of other sets",
+        summary: 'Create a set from element',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Server\SetCreated::class)]
+    #[ApiEventMarker( Evt\Set\SetChildCreated::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::ELEMENT_ADMIN)]
     #[ApiTypeMarker( Root\Api\Set\CreateSet::class)]
     public function create_set() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Post(
+        path: '/api/v1/sets/promote',
+        operationId: 'core.sets.promote_set',
+        description: "System can make sets from any element without permisision. No events ",
+        summary: 'System can make sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SYSTEM)]
+    #[ApiTypeMarker( Root\Api\Set\PromoteSet::class)]
+    public function promote_set() {
+        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
+    }
+
+
+    #[OA\Delete(
+        path: '/api/v1/sets/destroy',
+        operationId: 'core.sets.destroy_set',
+        description: "Set owners can destroy their sets, bypassing the leave event, can be blocked by handlers on the type ",
+        summary: 'Destroys the set, keeps the element',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Server\SetDestroyed::class)]
+    #[ApiEventMarker( Evt\Set\SetChildDestroyed::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_OWNER)]
     #[ApiTypeMarker( Root\Api\Set\DestroySet::class)]
     public function destroy_set() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+
+
+    #[OA\Delete(
+        path: '/api/v1/sets/remove_element',
+        operationId: 'core.sets.remove_element',
+        description: "Element namespace members can put element into any set that allows that ",
+        summary: 'Change the element owner',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Set\RemoveElement::class)]
     public function remove_element() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+
+
+    #[OA\Delete(
+        path: '/api/v1/sets/empty_set',
+        operationId: 'core.sets.empty_set',
+        description: "Element namespace members can clear out sticky elements. Event handlers can block their elements from leaving ",
+        summary: 'Removes all elements except sticky ones',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Set\EmptySet::class)]
     public function empty_set() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Patch(
+        path: '/api/v1/sets/stick_element',
+        operationId: 'core.sets.stick_element',
+        description: "Set namespace members can make sticky elements in those sets ",
+        summary: 'Makes element sticky in set operations',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Set\StickElement::class)]
     public function stick_element() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Patch(
+        path: '/api/v1/sets/unstick_element',
+        operationId: 'core.sets.unstick_element',
+        description: "Set namespace members can unstick elements in those sets ",
+        summary: 'Unsticks one or more elements in one or more sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Set\UnstickElement::class)]
     public function unstick_element() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
-    #[ApiTypeMarker( Root\Api\Set\ListChildren::class)]
-    public function list_children() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
-    #[ApiTypeMarker( Root\Api\Set\ListMembers::class)]
-    public function list_members() {
-        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
-    }
 
+
+    #[OA\Delete(
+        path: '/api/v1/sets/purge',
+        operationId: 'core.sets.purge_set',
+        description: "System can remove sets without events or permission ",
+        summary: 'System can delete any set',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SYSTEM)]
     #[ApiTypeMarker( Root\Api\Set\Purge::class)]
     public function purge_set() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+
+    #[OA\Delete(
+        path: '/api/v1/sets/purge_member',
+        operationId: 'core.sets.purge_member',
+        description: "System can remove elements without events from any set ",
+        summary: 'System can remove set contents',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SYSTEM)]
     #[ApiTypeMarker( Root\Api\Set\PurgeMember::class)]
     public function purge_member() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
-    #[ApiTypeMarker( Root\Api\Set\PromoteSet::class)]
-    public function promote_set() {
+
+
+
+
+    #[OA\Get(
+        path: '/api/v1/sets/show',
+        operationId: 'core.sets.show_set',
+        description: "Shows information about a set to set members ",
+        summary: 'Gives information about a set',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
+    #[ApiTypeMarker( Root\Api\Set\Show::class)]
+    public function show_set() {
+        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
+    }
+
+
+
+
+    #[OA\Get(
+        path: '/api/v1/sets/public',
+        operationId: 'core.sets.show_public',
+        description: "Anyone can see public information ",
+        summary: 'Shows a public view of this set',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::IS_PUBLIC)]
+    #[ApiTypeMarker( Root\Api\Set\ShowPublic::class)]
+    public function show_public() {
+        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
+    }
+
+
+
+
+
+    #[OA\Get(
+        path: '/api/v1/sets/list_children',
+        operationId: 'core.sets.list_children',
+        description: "Set namespace members can get a list of children sets ",
+        summary: 'List child sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
+    #[ApiTypeMarker( Root\Api\Set\ListChildren::class)]
+    public function list_children() {
+        return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
+    }
+
+
+
+
+    #[OA\Get(
+        path: '/api/v1/sets/list_elements',
+        operationId: 'core.sets.list_elements',
+        description: "Set namespace members can get a list of set contents ",
+        summary: 'list elements in a set',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
+    #[ApiTypeMarker( Root\Api\Set\ListMembers::class)]
+    public function list_elements() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
